--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,6 @@ venv/
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+!.elasticbeanstalk/*.global.
+
+package-lock.json
